--- a/.gitmodules
+++ b/.gitmodules
@@ -15,5 +15,5 @@
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "bb-pilcom/powdr"]
 	path = bb-pilcom/powdr
-	url = https://github.com/Maddiaa0/powdr
-	branch = md/minimal
+	url = https://github.com/AztecProtocol/powdr
+	branch = avm-minimal
