--- a/barretenberg/.vscode/launch.json
+++ b/barretenberg/.vscode/launch.json
@@ -1,7 +1,20 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "LLDB: Prove Ultra Honk Output All",
+            "type": "lldb",
+            "request": "launch",
+            "program": "/mnt/user-data/adam/aztec-packages/barretenberg/cpp/build-debug/bin/bb",
+            "args": [
+                "prove_ultra_honk_output_all",
+                "-o", "/tmp/bb-095XQV/tmp-PPXk0y",
+                "-b", "/tmp/bb-095XQV/tmp-PPXk0y/PrivateKernelInitArtifact-bytecode",
+                "-w", "/tmp/bb-095XQV/tmp-PPXk0y/witness.gz",
+                "-v"
+            ],
+            "cwd": "${workspaceFolder}",
+            "stopOnEntry": false
+        }
+    ]
 }
