--- a/yarn-project/simulator/tsconfig.json
+++ b/yarn-project/simulator/tsconfig.json
@@ -22,6 +22,9 @@
       "path": "../protocol-contracts"
     },
     {
+      "path": "../telemetry-client"
+    },
+    {
       "path": "../types"
     },
     {
