--- a/yarn-project/foundation/.prettierrc.json
+++ b/yarn-project/foundation/.prettierrc.json
@@ -6,5 +6,5 @@
   "importOrder": ["^@aztec/(.*)$", "<THIRD_PARTY_MODULES>", "^\\./|\\.\\./"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "importOrderParserPlugins": ["importAssertions", "typescript"]
+  "importOrderParserPlugins": ["importAssertions", "typescript", "decorators"]
 }
