--- a/yarn-project/txe/package.json
+++ b/yarn-project/txe/package.json
@@ -18,7 +18,8 @@
     "formatting": "run -T prettier --check ./src && run -T eslint ./src",
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
     "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules ../node_modules/.bin/jest --passWithNoTests",
-    "start": "DEBUG='aztec:*' && node ./dest/bin/index.js"
+    "dev": "DEBUG='aztec:*' && node ./dest/bin/index.js",
+    "start": "node ./dest/bin/index.js"
   },
   "inherits": [
     "../package.common.json"
