chore: manual sync

--- a/noir/noir-repo/tooling/nargo_cli/Cargo.toml
+++ b/noir/noir-repo/tooling/nargo_cli/Cargo.toml
@@ -43,12 +43,7 @@ prettytable-rs = "0.10"
 rayon = "1.8.0"
 thiserror.workspace = true
 tower.workspace = true
-async-lsp = { workspace = true, features = [
-  "client-monitor",
-  "stdio",
-  "tracing",
-  "tokio",
-] }
+async-lsp = { workspace = true, features = ["client-monitor", "stdio", "tracing", "tokio"] }
 const_format.workspace = true
 similar-asserts.workspace = true
 termcolor = "1.1.2"
