--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
     "preprocess:dev": "nodemon --config nodemon.json ./src/preprocess/index.js  && nodemon --config nodemon.json src/preprocess/generate_aztecnr_reference.js ",
     "typedoc": "docusaurus generate-typedoc",
     "rewrite": "node ./scripts/rewrite_paths.js",
+    "test:dev": "ENV=dev npx playwright test",
     "test": "npx playwright test"
   },
   "dependencies": {
