fix: TS LSP being slow

--- a/yarn-project/tsconfig.json
+++ b/yarn-project/tsconfig.json
@@ -16,7 +16,8 @@
     "resolveJsonModule": true,
     "composite": true,
     "skipLibCheck": true,
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+    "allowArbitraryExtensions": true
   },
   "references": [
     { "path": "accounts/tsconfig.json" },
