--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -67,3 +67,9 @@ jobs:
         run: |
           terraform init -input=false -backend-config="key=devnet/aztec-node"
           terraform apply -input=false -auto-approve
+
+      - name: Deploy Provers
+        working-directory: ./yarn-project/aztec/terraform/prover
+        run: |
+          terraform init -input=false -backend-config="key=devnet/prover"
+          terraform apply -input=false -auto-approve
