--- a/yarn-project/noir-contracts.js/tsconfig.json
+++ b/yarn-project/noir-contracts.js/tsconfig.json
@@ -15,8 +15,7 @@
   ],
   "include": [
     "src",
-    "artifacts",
-    "artifacts/*.json"
+    "artifacts/*.d.json.ts"
   ],
   "exclude": [
     "dest"
