chore: enable decorators in swc/jest

--- a/yarn-project/accounts/package.json
+++ b/yarn-project/accounts/package.json
@@ -45,7 +45,15 @@
     "rootDir": "./src",
     "transform": {
       "^.+\\.tsx?$": [
-        "@swc/jest"
+        "@swc/jest",
+        {
+          "jsc": {
+            "parser": {
+              "syntax": "typescript",
+              "decorators": true
+            }
+          }
+        }
       ]
     },
     "extensionsToTreatAsEsm": [
