--- a/yarn-project/foundation/package.json
+++ b/yarn-project/foundation/package.json
@@ -59,7 +59,15 @@
   "jest": {
     "transform": {
       "^.+\\.tsx?$": [
-        "@swc/jest"
+        "@swc/jest",
+        {
+          "jsc": {
+            "parser": {
+              "syntax": "typescript",
+              "decorators": true
+            }
+          }
+        }
       ]
     },
     "moduleNameMapper": {
