--- a/yarn-project/cli/package.json
+++ b/yarn-project/cli/package.json
@@ -37,7 +37,15 @@
     ],
     "transform": {
       "^.+\\.tsx?$": [
-        "@swc/jest"
+        "@swc/jest",
+        {
+          "jsc": {
+            "parser": {
+              "syntax": "typescript",
+              "decorators": true
+            }
+          }
+        }
       ]
     },
     "reporters": [
