--- a/yarn-project/txe/package.json
+++ b/yarn-project/txe/package.json
@@ -33,7 +33,15 @@
     "workerThreads": true,
     "transform": {
       "^.+\\.tsx?$": [
-        "@swc/jest"
+        "@swc/jest",
+        {
+          "jsc": {
+            "parser": {
+              "syntax": "typescript",
+              "decorators": true
+            }
+          }
+        }
       ]
     },
     "extensionsToTreatAsEsm": [
