--- a/yarn-project/tsconfig.json
+++ b/yarn-project/tsconfig.json
@@ -51,5 +51,5 @@
     { "path": "cli/tsconfig.json" }
   ],
   "files": ["./@types/jest/index.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/node_modules", "**/.*/"]
 }
