--- a/yarn-project/.earthlyignore
+++ b/yarn-project/.earthlyignore
@@ -51,6 +51,7 @@ end-to-end/data
 end-to-end/src/web/main.js
 end-to-end/src/web/main.js.LICENSE.txt
 l1-contracts/generated
+noir-protocol-circuits-types/artifacts
 builder/target/
 builder/proofs/
 builder/Prover.toml
