--- a/yarn-project/noir-contracts.js/package.json
+++ b/yarn-project/noir-contracts.js/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "yarn clean && yarn generate",
     "build:dev": "tsc -b --watch",
-    "clean": "rm -rf .tsbuildinfo ./artifacts ./codegenCache.json",
+    "clean": "rm -rf ./dest .tsbuildinfo ./artifacts ./codegenCache.json",
     "formatting": "run -T prettier --check ./src && run -T eslint ./src",
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
     "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules ../node_modules/.bin/jest --passWithNoTests",
