Fix paths for noir-contracts

--- a/yarn-project/noir-contracts.js/tsconfig.json
+++ b/yarn-project/noir-contracts.js/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "..",
   "compilerOptions": {
     "outDir": "dest",
-    "rootDir": ".",
+    "rootDir": "src",
     "tsBuildInfoFile": ".tsbuildinfo"
   },
   "references": [
