--- a/yarn-project/circuit-types/tsconfig.json
+++ b/yarn-project/circuit-types/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "../foundation"
     },
     {
+      "path": "../noir-protocol-circuits-types"
+    },
+    {
       "path": "../types"
     }
   ],
