--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -31,6 +31,7 @@ jobs:
     secrets: inherit
 
   build:
+    needs: setup
     runs-on: ${{ github.actor }}-x86
     steps:
       - uses: actions/checkout@v4
