--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -67,17 +67,16 @@ jobs:
 
       - name: Check if L1 contracts need deployment
         id: check_changes
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const { execSync } = require('child_process');
             const changedFiles = execSync('git diff --name-only ${{ github.event.before }} ${{ github.sha }}').toString().split('\n');
             const fileChanged = changedFiles.includes('l1-contracts/REDEPLOY');
-            console.log('fileChanged:', fileChanged);
-            return { fileChanged };
+            return fileChanged
 
       - name: Deploy L1 Contracts
-        if: steps.check_changes.outputs.fileChanged == 'true'
+        if: steps.check_changes.outputs.result == 'true'
         run: |
           earthly-ci --no-output ./yarn-project/cli+deploy-l1-contracts \
             --PRIVATE_KEY=${{ secrets.SEQ_1_PUBLISHER_PRIVATE_KEY }} \
@@ -86,7 +85,7 @@ jobs:
           ./scripts/extract_l1_addresses.sh ${{ env.FILE_PATH }}
 
       - name: Apply l1-contracts Terraform
-        if: steps.check_changes.outputs.fileChanged == 'true'
+        if: steps.check_changes.outputs.result == 'true'
         working-directory: ./l1-contracts/terraform
         run: |
           terraform init -input=false -backend-config="key=${{ env.DEPLOY_TAG }}/l1-contracts"
