--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           concurrency_key: build-release-artifacts-${{ github.actor }}
           dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
-      - name: "Build & Push images"
+      - name: "Build & Push aztec images"
         timeout-minutes: 40
         # Run the build steps for each image with version and arch, push to dockerhub
         run: |
@@ -50,6 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: ./.github/ci-setup-action
       - uses: actions/checkout@v4
         with:
           ref: "${{ env.GIT_COMMIT }}"
@@ -82,7 +83,7 @@ jobs:
             --PRIVATE_KEY=${{ secrets.SEQ_1_PUBLISHER_PRIVATE_KEY }} \
             --RPC_URL=https://${{ env.DEPLOY_TAG }}-mainnet-fork.aztec.network:8545/${{ secrets.FORK_API_KEY }} \
             | tee ${{ env.FILE_PATH }}
-          ./scripts/extract_l1_addresses.sh ${{ env.FILE_PATH }}
+          ./.github/gstscripts/extract_l1_addresses.sh ${{ env.FILE_PATH }}
 
       - name: Apply l1-contracts Terraform
         if: steps.check_changes.outputs.result == 'true'
