--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: CI
 on:
   push:
     branches: [master]
-  pull_request: {}
+  pull_request:
+    branches-ignore: [devnet]
   workflow_dispatch:
     inputs: {}
 
