--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -46,6 +46,23 @@ jobs:
         run: |
           earthly-ci --no-output --push ./yarn-project+export-aztec-arch --DIST_TAG=${{ env.DEPLOY_TAG }}
 
+      - name: Check if L1 contracts need deployment
+        id: check_changes_build
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { execSync } = require('child_process');
+            const changedFiles = execSync('git diff --name-only ${{ github.event.before }} ${{ github.sha }}').toString().split('\n');
+            const fileChanged = changedFiles.includes('l1-contracts/REDEPLOY');
+            return fileChanged
+
+      - name: "Build & Push cli image"
+        if: steps.check_changes_build.outputs.result == 'true'
+        timeout-minutes: 40
+        # Run the build steps for each image with version and arch, push to dockerhub
+        run: |
+          earthly-ci --no-output --push ./yarn-project+export-cli --DIST_TAG=${{ env.DEPLOY_TAG }}
+
   terraform_deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -67,7 +84,7 @@ jobs:
           aws-region: us-west-2
 
       - name: Check if L1 contracts need deployment
-        id: check_changes
+        id: check_changes_release
         uses: actions/github-script@v7
         with:
           script: |
@@ -75,18 +92,18 @@ jobs:
             const changedFiles = execSync('git diff --name-only ${{ github.event.before }} ${{ github.sha }}').toString().split('\n');
             const fileChanged = changedFiles.includes('l1-contracts/REDEPLOY');
             return fileChanged
-
       - name: Deploy L1 Contracts
-        if: steps.check_changes.outputs.result == 'true'
+        if: steps.check_changes_release.outputs.result == 'true'
         run: |
-          earthly-ci --no-output ./yarn-project/cli+deploy-l1-contracts \
-            --PRIVATE_KEY=${{ secrets.SEQ_1_PUBLISHER_PRIVATE_KEY }} \
-            --RPC_URL=https://${{ env.DEPLOY_TAG }}-mainnet-fork.aztec.network:8545/${{ secrets.FORK_API_KEY }} \
+          docker pull aztecprotocol/cli:${{ env.DEPLOY_TAG }}
+          docker run -ti --rm aztecprotocol/cli:${{ env.DEPLOY_TAG }} \
+            deploy-l1-contracts -p ${{ secrets.SEQ_1_PUBLISHER_PRIVATE_KEY }} \
+            -u https://${{ env.DEPLOY_TAG }}-mainnet-fork.aztec.network:8545/${{ secrets.FORK_API_KEY }} \
             | tee ${{ env.FILE_PATH }}
           ./.github/gstscripts/extract_l1_addresses.sh ${{ env.FILE_PATH }}
 
       - name: Apply l1-contracts Terraform
-        if: steps.check_changes.outputs.result == 'true'
+        if: steps.check_changes_release.outputs.result == 'true'
         working-directory: ./l1-contracts/terraform
         run: |
           terraform init -input=false -backend-config="key=${{ env.DEPLOY_TAG }}/l1-contracts"
