--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -3,12 +3,11 @@ services:
   ethereum:
     image: ghcr.io/foundry-rs/foundry:v1.0.0
     command: "'anvil --silent -p 8545 --host 0.0.0.0 --chain-id 31337'"
-    network_mode: host
 
   aztec:
     image: aztecprotocol/aztec:${AZTEC_DOCKER_TAG:-latest}
     environment:
-      ETHEREUM_HOST: http://127.0.0.1:8545
+      ETHEREUM_HOST: http://ethereum:8545
       CHAIN_ID: 31337
       ARCHIVER_POLLING_INTERVAL_MS: 50
       P2P_BLOCK_CHECK_INTERVAL_MS: 50
@@ -18,4 +17,12 @@ services:
       ARCHIVER_VIEM_POLLING_INTERVAL_MS: 500
     depends_on:
       - ethereum
-    network_mode: host
+
+  test:
+    build:
+      context: ../
+      dockerfile: ./docs/Dockerfile.test
+    volumes:
+      - ./docs:/usr/src/docs/docs
+    tty: true
+    stdin_open: true
