--- a/barretenberg/cpp/src/barretenberg/vm/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/vm/CMakeLists.txt
@@ -1,3 +1,3 @@
 if(NOT DISABLE_AZTEC_VM)
-  barretenberg_module(vm honk sumcheck)
+  barretenberg_module(vm honk sumcheck stdlib_honk_recursion)
 endif()
