--- a/noir-projects/noir-contracts/Nargo.toml
+++ b/noir-projects/noir-contracts/Nargo.toml
@@ -44,5 +44,6 @@ members = [
     "contracts/uniswap_contract",
     "contracts/multi_call_entrypoint_contract",
     "contracts/static_child_contract",
-    "contracts/static_parent_contract"
+    "contracts/static_parent_contract",
+    "contracts/my_contract"
 ]
