chore: Generate declaration files for VKs

--- a/yarn-project/noir-protocol-circuits-types/tsconfig.json
+++ b/yarn-project/noir-protocol-circuits-types/tsconfig.json
@@ -26,5 +26,5 @@
       "path": "../merkle-tree"
     }
   ],
-  "include": ["src", "artifacts/*.d.json.ts"]
+  "include": ["src", "artifacts/*.d.json.ts", "artifacts/**/*.d.json.ts", ]
 }
