--- a/yarn-project/aztec/package.json
+++ b/yarn-project/aztec/package.json
@@ -35,6 +35,7 @@
     "@aztec/builder": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
     "@aztec/circuits.js": "workspace:^",
+    "@aztec/cli": "workspace:^",
     "@aztec/entrypoints": "workspace:^",
     "@aztec/ethereum": "workspace:^",
     "@aztec/foundation": "workspace:^",
@@ -47,6 +48,7 @@
     "@aztec/prover-client": "workspace:^",
     "@aztec/pxe": "workspace:^",
     "@aztec/telemetry-client": "workspace:^",
+    "@aztec/txe": "workspace:^",
     "abitype": "^0.8.11",
     "commander": "^11.1.0",
     "koa": "^2.14.2",
