--- a/yarn-project/cli/package.json
+++ b/yarn-project/cli/package.json
@@ -61,6 +61,7 @@
     "@aztec/accounts": "workspace:^",
     "@aztec/aztec.js": "workspace:^",
     "@aztec/bb-prover": "workspace:^",
+    "@aztec/builder": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
     "@aztec/circuits.js": "workspace:^",
     "@aztec/ethereum": "workspace:^",
@@ -68,15 +69,11 @@
     "@aztec/l1-artifacts": "workspace:^",
     "@aztec/noir-contracts.js": "workspace:^",
     "@aztec/protocol-contracts": "workspace:^",
-    "@aztec/simulator": "workspace:^",
     "@aztec/types": "workspace:^",
     "@iarna/toml": "^2.2.5",
     "@libp2p/peer-id-factory": "^3.0.4",
     "axios": "^1.7.2",
     "commander": "^9.0.0",
-    "jszip": "^3.10.1",
-    "lodash.startcase": "^4.4.0",
-    "node-fetch": "^3.3.2",
     "semver": "^7.5.4",
     "solc": "^0.8.26",
     "source-map-support": "^0.5.21",
