--- a/noir-projects/Dockerfile
+++ b/noir-projects/Dockerfile
@@ -3,7 +3,7 @@ FROM aztecprotocol/avm-transpiler as transpiler
 FROM --platform=linux/amd64 aztecprotocol/barretenberg-x86_64-linux-clang as barretenberg
 
 FROM ubuntu:lunar AS builder
-RUN apt-get update && apt-get install -y parallel nodejs npm 
+RUN apt-get update && apt-get install -y parallel nodejs npm jq
 RUN npm install --global yarn
 # Copy in bb
 COPY --from=barretenberg /usr/src/barretenberg/cpp/build/bin/bb /usr/src/barretenberg/cpp/build/bin/bb
