--- a/aztec-up/bin/docker-compose.sandbox.yml
+++ b/aztec-up/bin/docker-compose.sandbox.yml
@@ -15,7 +15,6 @@ services:
       FORK_URL:
       FORK_BLOCK_NUMBER:
       ANVIL_PORT: ${ANVIL_PORT:-8545}
-    profiles: [sandbox]
 
   aztec:
     image: "aztecprotocol/aztec"
@@ -37,17 +36,6 @@ services:
       TEST_ACCOUNTS: ${TEST_ACCOUNTS:-true}
     volumes:
       - ./log:/usr/src/yarn-project/aztec/log:rw
-    command: "${AZTEC_CMD}"
-    profiles: [sandbox, test]
-
-  nargo:
-    image: "aztecprotocol/aztec-nargo"
-    profiles: [test]
-    entrypoint: /usr/bin/nargo
-    command: ${NARGO_CMD}
-    working_dir: ${WORKING_DIR}
-    environment:
-      HOME: # Loaded from the user shell
-      NARGO_FOREIGN_CALL_TIMEOUT: 300000
-    volumes:
-      - ${HOME}:${HOME}
+    depends_on:
+      - ethereum
+    command: "start --sandbox"
